--- a/_exams/gariplerinsinavi.yml
+++ b/_exams/gariplerinsinavi.yml
@@ -1,6 +1,6 @@
 title: Programlama Dilleri Final sorular 2 - 4 - 7
-footer: Süreniz 15 dk 
+footer: Sureniz 15 dk 
 q:
   - soruno2
-  - soruno4
+  - soruno4 
   - soruno7
