--- a/_exams/testsinav.yml
+++ b/_exams/testsinav.yml
@@ -1,5 +1,5 @@
 title: Programlama Dilleri Final sorular 0 - 1 - 7 - 3
-footer: Süreniz 90 dk 
+footer: Sureniz 90 dk 
 q:
   - ornek-bir-soru
   - diger-ornek-soru
