--- a/_exams/progdil-2011.yml
+++ b/_exams/progdil-2011.yml
@@ -1,5 +1,5 @@
-title: Programlama Dilleri Final sorular 0 -1
-footer: Süreniz 100 dk 
+title: Programlama Dilleri Final sorular 0 - 1
+footer: Sureniz 100 dk 
 q:
-  - ornek-bir-soru
+  - ornek-bir-soru 
   - diger-ornek-soru
